# SpeechRNT

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml
backend/: CMakeLists.txt  CMakeLists_test.txt  Dockerfile  MARIAN_INTEGRATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  STT_INTEGRATION_COMPLETION.md  TTS_INTEGRATION_COMPLETION.md  setup_marian.sh  setup_silero_vad.bat  setup_silero_vad.sh  setup_uwebsockets.sh  setup_whisper.bat  setup_whisper.sh  test_compile.cpp  test_silero_vad_simple.cpp  test_streaming.cpp  test_stt_integration.bat  test_task2_compilation.cpp  test_tts_integration.bat  test_whisper.cpp  test_whisper_integration.cpp  verify_marian_implementation.cpp
backend/config/: adaptive_quality.json  advanced_model_management.json  advanced_stt.json  contextual_transcription.json  error_handling.json  gpu.json  language_detection.json  languages.json  models.json  mt.json  mt_production.json  mt_testing.json  quality_assessment.json  server.json  stt.json
backend/docs/: ADAPTIVE_QUALITY_IMPLEMENTATION.md  ADVANCED_MODEL_MANAGEMENT.md  ADVANCED_STT_INFRASTRUCTURE_IMPLEMENTATION.md  AudioBufferManager.md  EMOTION_DETECTION_IMPLEMENTATION.md  GPU_ACCELERATOR.md  MT_API_DOCUMENTATION.md  MT_CONFIGURATION.md  MT_CONFIGURATION_GUIDE.md  STT_CONFIGURATION_MANAGEMENT.md  STT_ERROR_RECOVERY.md  STT_HEALTH_MONITORING.md  STT_PERFORMANCE_MONITORING.md  STT_TRANSLATION_INTEGRATION.md  SileroVAD_Implementation.md  language_detection.md  performance_optimization_summary.md  quantization.md
backend/examples/: adaptive_quality_example.cpp  advanced_debugging_example.cpp  advanced_stt_infrastructure_example.cpp  contextual_transcriber_example.cpp  gpu_accelerator_example.cpp  language_detection_integration_example.cpp  mt_config_example.cpp  mt_integration_example.cpp  quantization_example.cpp  stt_config_example.cpp  stt_error_recovery_example.cpp  stt_health_monitoring_example.cpp  stt_integration_example.cpp  tts_integration_example.cpp
backend/include/audio/: adaptive_audio_processor.hpp  advanced_streaming_optimizer.hpp  audio_buffer_manager.hpp  audio_monitoring_system.hpp  audio_preprocessor.hpp  audio_processor.hpp  audio_quality_analyzer.hpp  audio_utils.hpp  load_balanced_pipeline.hpp  network_monitor.hpp  packet_recovery.hpp  quality_degradation.hpp  realtime_audio_analyzer.hpp  silero_vad_impl.hpp  streaming_optimizer.hpp  voice_activity_detector.hpp
backend/include/core/: client_session.hpp  language_change_message.hpp  message_protocol.hpp  pipeline_recovery.hpp  pipeline_websocket_integration.hpp  session_recovery.hpp  stt_config_handler.hpp  task_queue.hpp  translation_pipeline.hpp  utterance_manager.hpp  websocket_server.hpp
backend/include/models/: model_manager.hpp  model_quantization.hpp
backend/include/mt/: gpu_accelerator.hpp  language_detector.hpp  marian_error_handler.hpp  marian_translator.hpp  mt_config.hpp  mt_config_loader.hpp  performance_monitor.hpp  quality_manager.hpp  translation_interface.hpp
backend/include/stt/: emotion_detector.hpp  emotional_context_manager.hpp  optimized_streaming_state.hpp  performance_optimized_stt.hpp  quantization_config.hpp  streaming_audio_manager.hpp  streaming_transcriber.hpp  stt_config.hpp  stt_error_recovery.hpp  stt_health_checker.hpp  stt_health_integration.hpp  stt_interface.hpp  stt_performance_tracker.hpp  stt_translation_integration.hpp  transcription_manager.hpp  whisper_stt.hpp
backend/include/tts/: coqui_tts.hpp  piper_tts.hpp  tts_interface.hpp  voice_manager.hpp
backend/include/utils/: advanced_debug.hpp  config.hpp  error_handler.hpp  gpu_config.hpp  gpu_manager.hpp  gpu_memory_pool.hpp  json_utils.hpp  logging.hpp  memory_pool.hpp  optimized_thread_pool.hpp  performance_monitor.hpp  production_diagnostics.hpp
backend/src/: advanced_stt_test.cpp  audio_buffer_demo.cpp  audio_demo.cpp  audio_utils_demo.cpp  gpu_test.cpp  main.cpp  performance_optimization_demo.cpp  simple_emotion_test.cpp  stt_performance_demo.cpp  stt_translation_integration_demo.cpp  test_adaptive_quality_manager.cpp  test_advanced_model_management.cpp  test_advanced_streaming.cpp  test_audio_integration.cpp  test_emotion_detection.cpp  test_external_service_integration.cpp  test_real_mt_integration.cpp  test_real_stt_integration.cpp  test_real_tts_integration.cpp  test_realtime_audio_analyzer.cpp  test_translation_integration.cpp
backend/src/audio/: adaptive_audio_processor.cpp  advanced_streaming_optimizer.cpp  audio_buffer_manager.cpp  audio_monitoring_system.cpp  audio_preprocessor.cpp  audio_processor.cpp  audio_quality_analyzer.cpp  audio_utils.cpp  load_balanced_pipeline.cpp  network_monitor.cpp  packet_recovery.cpp  quality_degradation.cpp  realtime_audio_analyzer.cpp  silero_vad_impl.cpp  streaming_optimizer.cpp  voice_activity_detector.cpp
backend/src/core/: client_session.cpp  language_change_message.cpp  message_protocol.cpp  pipeline_recovery.cpp  pipeline_websocket_integration.cpp  session_recovery.cpp  stt_config_handler.cpp  task_queue.cpp  translation_pipeline.cpp  utterance_manager.cpp  websocket_server.cpp
backend/src/models/: model_manager.cpp  model_quantization.cpp
backend/src/mt/: gpu_accelerator.cpp  language_detector.cpp  marian_error_handler.cpp  marian_translator.cpp  mt_config.cpp  mt_config_loader.cpp  performance_monitor.cpp  quality_manager.cpp
backend/src/stt/: emotion_detector.cpp  emotional_context_manager.cpp  optimized_streaming_state.cpp  performance_optimized_stt.cpp  quantization_config.cpp  streaming_audio_manager.cpp  streaming_transcriber.cpp  stt_config.cpp  stt_error_recovery.cpp  stt_health_checker.cpp  stt_health_integration.cpp  stt_performance_tracker.cpp  stt_translation_integration.cpp  transcription_manager.cpp  whisper_stt.cpp
backend/src/tts/: coqui_tts.cpp  piper_tts.cpp  voice_manager.cpp
backend/tests/: CMakeLists.txt  run_mt_integration_tests.sh  run_stt_integration_tests.sh  run_stt_unit_tests.bat  run_stt_unit_tests.ps1  run_stt_unit_tests.sh  simple_test_runner.cpp
(+252 files in other folders)
